--- a/style.css
+++ b/style.css
@@ -59,11 +59,15 @@ body {
 
 
 h2 {
-  font-size: 1.5em;
+  font-size: 1.3em;
+}
+
+h3, h4 {
+  padding-top: 20px;
 }
 
 p {
-  font-size: 1.2em;
+  font-size: 1em;
 }
 
 .credits {
